docker/k8s/task-bot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-bot
  labels:
    app: task-bot
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: task-bot
  template:
    metadata:
      labels:
        app: task-bot
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-8
      volumes:
        - name: task-bot-storage
          hostPath:
            type: Directory
            path: /nfs/task-bot
      containers:
      - name: task-bot
        image: monumenta-docker.injic.io/monumenta-automation-bot
        tty: false
        stdin: false
        volumeMounts:
        - name: task-bot-storage
          mountPath: /home/epic/.task_bot
        command: ["./discord_bots/task_bot/task_bot.py"]
        resources:
          limits:
            cpu: 250m
            memory: 64Mi
          requests:
            cpu: 100m
            memory: 32Mi
      imagePullSecrets:
      - name: regcred
