docker/k8s/dev-environment.yml

# The nodeport service exposing the SSH port

apiVersion: v1
kind: Service
metadata:
  name: monumenta-dev-environment-nodeport
  namespace: default
  labels:
    app: monumenta-dev-environment
spec:
  type: NodePort
  selector:
    app: monumenta-dev-environment
  ports:
  # SSH
  - name: "22"
    port: 22
    nodePort: 9922
    targetPort: 22

---

# The actual container that runs SSH that you can connect to

apiVersion: apps/v1
kind: Deployment
metadata:
  name: monumenta-dev-environment
  namespace: default
  labels:
    app: monumenta-dev-environment
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: monumenta-dev-environment
  template:
    metadata:
      labels:
        app: monumenta-dev-environment
    spec:
      serviceAccountName: dev-service-account
      volumes:
        - name: nfs-build-project
          nfs:
            server: 10.6.3.1
            path: /nfs/build/project_epic
        - name: nfs-play-project
          nfs:
            server: 10.6.3.1
            path: /nfs/play/project_epic
        - name: nfs-stage-project
          nfs:
            server: 10.6.3.1
            path: /nfs/stage/project_epic
        - name: nfs-old-backups
          nfs:
            server: 10.6.3.1
            path: /nfs/0_OLD_BACKUPS
        - name: nfs-archive
          nfs:
            server: 10.6.3.1
            path: /nfs/1_ARCHIVE
        - name: nfs-shared
          nfs:
            server: 10.6.3.1
            path: /nfs/4_SHARED
      containers:
      - name: monumenta-dev-environment
        image: monumenta-docker.injic.io/monumenta-dev-environment
        tty: false
        stdin: false
        ports:
        - containerPort: 22
        volumeMounts:
        - name: nfs-build-project
          mountPath: /home/epic/build/project_epic
        - name: nfs-play-project
          mountPath: /home/epic/play/project_epic
        - name: nfs-stage-project
          mountPath: /home/epic/stage/project_epic
        - name: nfs-old-backups
          mountPath: /home/epic/0_OLD_BACKUPS
        - name: nfs-archive
          mountPath: /home/epic/1_ARCHIVE
        - name: nfs-shared
          mountPath: /home/epic/4_SHARED
      imagePullSecrets:
      - name: regcred
