docker/k8s/lets-encrypt.yml
apiVersion: v1
kind: Service
metadata:
  name: lets-encrypt-nodeport
  labels:
    app: cron-lets-encrypt
spec:
  type: NodePort
  selector:
    app: cron-lets-encrypt
  ports:
  - name: http
    port: 20080
    nodePort: 20080
    targetPort: 80
