docker/k8s/test-echo-ip.yml
# Service / external network ports

apiVersion: v1
kind: Service
metadata:
  name: test-echo-ip
  labels:
    app: test-echo-ip
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: test-echo-ip
  ports:
  - name: minecraft
    port: 80
    nodePort: 9002
    targetPort: 80

---

# This is the actual deployment, specifying what it should run
#
# This is just a stock nginx webserver with the appropriate directory mounted
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-echo-ip
  labels:
    app: test-echo-ip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-echo-ip
  template:
    metadata:
      labels:
        app: test-echo-ip
    spec:
      priorityClassName: monumenta-infra
      containers:
      - name: test-echo-ip
        image: nginx:stable
        resources:
          # Trivial nginx echo endpoint.
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 128Mi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: test-echo-ip-config
          mountPath: /etc/nginx/conf.d
      volumes:
        - name: test-echo-ip-config
          configMap:
            name: test-echo-ip-config
