docker/k8s/zfs-snapshot-manager-m12.yml
apiVersion: v1
kind: Service
metadata:
  name: zfs-snapshot-manager-m12
  namespace: kube-system
spec:
  selector:
    app: zfs-snapshot-manager-m12
  clusterIP: None
  ports:
  - name: api
    port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zfs-snapshot-manager-m12
  namespace: kube-system
  labels:
    app: zfs-snapshot-manager-m12
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: zfs-snapshot-manager-m12
  template:
    metadata:
      labels:
        app: zfs-snapshot-manager-m12
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-12
      volumes:
        - name: zfs-snapshot-manager-m12-config
          configMap:
            name: zfs-snapshot-manager-m12-config
        - name: zfs-device
          hostPath:
            path: /dev/zfs
            type: CharDevice
      containers:
      - name: zfs-snapshot-manager
        image: ghcr.io/teammonumenta/monumenta-automation/zfs-snapshot-manager-ubuntu-2204
        command: [ "/app/zfs-snapshot-manager", "--config", "/app/config.yaml" ]
        tty: false
        stdin: false
        securityContext:
          privileged: true
        ports:
        - containerPort: 8080
          name: api
        volumeMounts:
        - name: zfs-snapshot-manager-m12-config
          mountPath: /app/config.yaml
          subPath: config.yaml
        - name: zfs-device
          mountPath: /dev/zfs
        resources:
          limits:
            cpu: "0.5"
            memory: 100Mi
      imagePullSecrets:
      - name: githubcred
