docker/k8s/kanboard.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kanboard
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "75m"
    nginx.org/client-max-body-size: "75m"
spec:
  tls:
  - hosts:
    - kanboard.playmonumenta.com
  rules:
  - host: kanboard.playmonumenta.com
    http:
      paths:
      - backend:
          serviceName: kanboard
          servicePort: 80

---

# Service / network ports

apiVersion: v1
kind: Service
metadata:
  name: kanboard
  labels:
    app: kanboard
spec:
  type: ClusterIP
  selector:
    app: kanboard
  ports:
  - name: "80"
    port: 80
    targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanboard
  labels:
    app: kanboard
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: kanboard
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-8
      volumes:
        - name: kanboard-php-config
          configMap:
            name: kanboard-php-config
        - name: kanboard-config
          configMap:
            name: kanboard-config
        - name: kanboard-data
          hostPath:
            type: Directory
            path: /nfs/kanboard/data
        - name: kanboard-plugins
          hostPath:
            type: Directory
            path: /nfs/kanboard/plugins
        - name: kanboard-ssl
          hostPath:
            type: Directory
            path: /nfs/kanboard/ssl
      containers:
      - name: kanboard
        image: kanboard/kanboard:v1.2.18
        tty: false
        stdin: false
        volumeMounts:
        - name: kanboard-config
          mountPath: /var/www/app/config.php
          subPath: config.php
        - name: kanboard-php-config
          mountPath: /etc/php7/conf.d/kanboard-memory.ini
          subPath: kanboard-memory.ini
        - name: kanboard-data
          mountPath: /var/www/app/data
        - name: kanboard-plugins
          mountPath: /var/www/app/plugins
        - name: kanboard-ssl
          mountPath: /etc/nginx/ssl
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
            hugepages-2Mi: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
            hugepages-2Mi: 256Mi
