docker/k8s/monumenta-prometheus.yaml
# helm repo add stable https://kubernetes-charts.storage.googleapis.com
# helm repo update
# helm install prom-op stable/prometheus-operator --set kubeProxy.enabled=false --set grafana.plugins=grafana-piechart-panel --set grafana.adminPassword=...
# Default password prom-operator if admin password not passed in

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: maps-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - ok"
spec:
  tls:
  - hosts:
    - dashboard.playmonumenta.com
  rules:
  - host: dashboard.playmonumenta.com
    http:
      paths:
      - backend:
          serviceName: prom-op-grafana
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: maps-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - ok"
spec:
  tls:
  - hosts:
    - prometheus.playmonumenta.com
  rules:
  - host: prometheus.playmonumenta.com
    http:
      paths:
      - backend:
          serviceName: prom-op-prometheus-operato-prometheus
          servicePort: 9090
