docker/k8s/prometheus-monitors.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: tm-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - ok"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dashboard.playmonumenta.com
  rules:
  - host: dashboard.playmonumenta.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kube-prometheus-stack-grafana
              port:
                number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: tm-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - ok"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.playmonumenta.com
  rules:
  - host: prometheus.playmonumenta.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: prometheus-operated
              port:
                number: 9090
